# ChangeLog for net-analyzer/netwag
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netwag/ChangeLog,v 1.29 2013/02/01 15:43:31 jer Exp $

  01 Feb 2013; Jeroen Roovers <jer@gentoo.org> netwag-5.39.0.ebuild:
  /usr/bin/eterm changed to /usr/bin/Eterm.

  07 Jan 2013; Jeroen Roovers <jer@gentoo.org> -netwag-5.38.0.ebuild:
  Old.

  03 Jan 2013; Andreas Schuerch <nativemad@gentoo.org> netwag-5.39.0.ebuild:
  x86 stable, see bug 440202

  17 Sep 2012; Rick Farina <zerochaos@gentoo.org> netwag-5.39.0.ebuild:
  reorder deps so konsole isn't default (not everyone uses kde)

  09 Jul 2012; Jeroen Roovers <jer@gentoo.org> netwag-5.39.0.ebuild:
  Clean up.

*netwag-5.39.0 (09 Jul 2012)

  09 Jul 2012; Jeroen Roovers <jer@gentoo.org> +netwag-5.39.0.ebuild:
  Version bump.

  02 Mar 2011; Jeroen Roovers <jer@gentoo.org> netwag-5.38.0.ebuild:
  Readd old homepage.

  02 Mar 2011; Tim Harder <radhermit@gentoo.org> netwag-5.38.0.ebuild:
  Update HOMEPAGE and SRC_URI (bug #357019).

  17 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> netwag-5.38.0.ebuild:
  x86 stable wrt bug #348338

  15 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> netwag-5.36.0.ebuild:
  x86 stable wrt bug #341081

*netwag-5.38.0 (15 Oct 2010)

  15 Oct 2010; Jeroen Roovers <jer@gentoo.org> +netwag-5.38.0.ebuild:
  Version bump. Update license. Unconditionally install certain docs.

*netwag-5.36.0 (22 Nov 2009)

  22 Nov 2009; Jeroen Roovers <jer@gentoo.org> +netwag-5.36.0.ebuild,
  metadata.xml:
  Version bump. Run genemake in src_configure. Update number of tools. Run
  genemake through sh. Use emake to install. Marked ~hppa too.

  16 Apr 2007; <welp@gentoo.org> netwag-5.33.0.ebuild:
  Keyworded ~amd64

  15 Apr 2007; Marcelo Goes <vanquirius@gentoo.org> -netwag-5.28.0.ebuild,
  -netwag-5.31.0.ebuild, -netwag-5.32.0.ebuild:
  Remove old ebuilds.

  20 Mar 2007; Raúl Porcel <armin76@gentoo.org> netwag-5.33.0.ebuild:
  x86 stable
