@@ -1,13 +1,13 @@
 DEFINED_PHASES=configure install prepare
-DEPEND=>=net-libs/libnet-1.1.1 net-libs/libpcap ~net-libs/netwib-5.39.0
+DEPEND=net-libs/libnet:1.1 net-libs/libpcap ~net-libs/netwib-5.39.0
 DESCRIPTION=Toolbox of 217 utilities for testing Ethernet/IP networks
-EAPI=4
+EAPI=5
 HOMEPAGE=http://ntwox.sourceforge.net/ http://www.laurentconstantin.com/en/netw/netwox/
 IUSE=doc
 KEYWORDS=~amd64 ~hppa ~ppc x86
 LICENSE=GPL-3
-RDEPEND=>=net-libs/libnet-1.1.1
+RDEPEND=net-libs/libnet:1.1 net-libs/libpcap ~net-libs/netwib-5.39.0
 SLOT=0
 SRC_URI=mirror://sourceforge/ntwox/netwox-5.39.0-src.tgz doc? ( mirror://sourceforge/ntwox/netwox-5.39.0-doc_html.tgz )
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=d367726ab9f6c1784453ce0f55b5309f
+_md5_=7615116535b7a712a50f8f3e7af27f97
