@@ -3,13 +3,13 @@ Hash: SHA256
 
 DIST netwag-5.39.0-doc_html.tgz 46461 SHA256 5dfc818ac1a66274ace0524eddf5fce2b617cad3652e16e619e6fb541d6565c5 SHA512 499d201b510c5175b09c7dbcc8b9bec1d9aa2fbf90613a937f88be5835dd67acfe28e78483ce2124c4fa3b43ea8f409ce6115e48f12ae0ffc4ad684354488030 WHIRLPOOL 076bb7b93901cdfc9a1c24c92f53ed1fb7c0622b3a0548a9624de7c890f8abbdac20ded96485761ef5adfc67fa0c6e94463743a114bb74097b3c099af7379d21
 DIST netwag-5.39.0-src.tgz 164731 SHA256 e625c840797dc3568ede90dafdee6a0b63775d77c291d418cd9a2e7242e35a57 SHA512 a9f0279d42666eff636bb66258a17a4e10528b7329dfe5e5d8c0ddce15048d847a2a8e892ba82a606b37ceb328b8b31be52d7e8ee7aeb6feb1f3d254aa3a2401 WHIRLPOOL d2ceab34df6af18bd46162ce435ba0ac5fa8c2cac94436ce506925b36e4bb91d01e5c6b380fdba9eda038ce44591bc5e0a3485e6c1728a87c1419b8fd3858b5e
-EBUILD netwag-5.39.0.ebuild 1366 SHA256 ffcb8b5bde927de2cc732cf987f0418c824739605290e9348ea65f9be232ffc2 SHA512 c4b06fdd8fbb8abf4f4b60b9cd675b0029dbdcf7e6a44f15089591872ca54fe65a803b33e6c4731da6b0308576539e25d21f18c32c4f84f4480f5d700e3d7801 WHIRLPOOL 227d78bb0d52d505e51328c4cead0e0c7aa4cdeeaae45fde3b96513e94cbd45b49ad1292dc64f1dd897af10d1ea4c2bac207e8f44a615b71a42de770fc35fde2
-MISC ChangeLog 4109 SHA256 5e08d12ad27b5b38b1e7683d693b470168b9e0e6c1a30aae359b673f44bca75a SHA512 4e1242530020b397fe13ba8e5164c25a493dcfb67c02fd2bf48be7af964dbb5268be0283be831f8497f0b07254dafbd6e2cc65ccf4cef371df18aa98a527bb62 WHIRLPOOL c1258ab183bba9fdd74ba4739585b0562e857bc4ba2269bde2facdfa472c76ddb56673137e7540a8a7fb95f01690f78092212d2cc27084036f726ea3fcb934f2
+EBUILD netwag-5.39.0.ebuild 1363 SHA256 f8f6c10add4d5876b1c497255ea22ef3c3312b8b95c7cc550a284076b882ee9d SHA512 a1dc141e7d609f74e9440d49cb1e362878e4ed884b3dd7e2354677082860638b392fcf478ff2ef55a828602979941b64ad0708e6902dba66df84e776b91a655f WHIRLPOOL 8c902dc8a606e747dba6f2679e576e753f34ec0157e6683a125e492f0666e1c546fe585ca20e06f898f0454cf9062a86fc88ed8fef360fd183e86bd8f5fb5eb5
+MISC ChangeLog 4204 SHA256 7c8605114aa90e1b179e2f5590dcc39eddf2438e0f7b48b9e241e00d265331dc SHA512 d7aee5f506fd6c14e7a8fa6aec2c5e46de1721fa32af92d4793fa968334e32922dd87c1c01013437cf65632e6c9edf324ffd8d6c8c6544794bf48c08249d53e6 WHIRLPOOL 90ed77766387ad01d7e162c335775965d191ad6b040c9820ebb917e15976629f83baf7391ce3aa41296f0f6afa1dfcd3c84bc74dbe0acd4edf4e6025a8b5c8ad
 MISC metadata.xml 252 SHA256 f5775410aa5971332f2e38ab83698a4d0dd3712fc0906085f6d3e92a17e919e7 SHA512 26138201d37cb7daeea629c11d1cf76109f8a45f9eab28c1aa73e2350a58c7c724eb40c397cfe65a9cb6dbae509af1c0a4be2a8dc3425f205f472cd5152a8c72 WHIRLPOOL 6c3c3b31040917d464c59131e80bddcf28d63e4d36a4a37b1b6ac6a284b1f099d48d6afb1e83fba284a12659b7fbee33c3adee2bcc34d9d5f5bdc3c08b6f600a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlEL4qQACgkQVWmRsqeSphNn2QCfRMflegVFpfRkJwL48LXIaDJ+
-mOAAn3RYhXIEHpXWjA3zf7kgEhhMocdZ
-=Uz1l
+iEYEAREIAAYFAlPEYv0ACgkQVWmRsqeSphP3WQCfSEHSrwxy+Uh5R99CwMXpG2kt
+DUsAnilwWV39FkfiBRYcp5k0itUOECnF
+=RfPt
 -----END PGP SIGNATURE-----
