@@ -3,13 +3,13 @@ Hash: SHA256
 
 DIST netwox-5.39.0-doc_html.tgz 146301 SHA256 430c5c53852005c8ab4012564b70bc78dceece573567b8babb9b09efd21365f3 SHA512 1bb6c87f2aeea8b10e9bec0725ed82b21c41290d2f2626024b13525fd92596e7aa9f91788d966a51900c0e1b346ac9fb30000344fa5b1450fe9ceb724df4be56 WHIRLPOOL 96272caaf6b5f77780507412cb6de7a89447c6e90bb0437e668b20891530ee8bdc2e1db282a44d2d66dbe063f9f5e0281f1d197c78915858dde9393916c86eaf
 DIST netwox-5.39.0-src.tgz 771942 SHA256 35eaabac4d11d6a2fa7001bd9c153e053e6080c5f5b66c37e463ad32e909fbfd SHA512 3781c1c860d1545c269b27a702c59f1cb6b12af2e66fb3cbe776f3e085681a75ed3096d64cfdf92f65eff7213ceaab474b7e15c169c12e2c05220790ce337e37 WHIRLPOOL 00b270e2cbad1542acff6c1a0fa40297e814ba513a6c5c36ea1a7e9a3f13cce1ad01b8902c6218f97e0cf659433bab9c6fbe2f817a8866042351e9c94a7f4576
-EBUILD netwox-5.39.0.ebuild 1545 SHA256 8ac02640597b878a2a40e57ea086d6aa024e3ff451d99fb336c86e2cb13a1982 SHA512 a1294ea427763d9dfa8b3086f6ab1f09d095e078eabcd70515887802127ed91bec0467aff3fb5a338fcca8d9632a37d45e3a406ae6dda225b99697992ce594d4 WHIRLPOOL 68fa02b1ce9d30656b3ae0c18c2da17cd81d92f7f20f32607e99f36a0ab9739a1d73f114b5057a26b754b31d61c73d08c01b383346f058761d5a5efc16d1c346
-MISC ChangeLog 4882 SHA256 42b59e9a53a5afcdce758754a4f1bbe32fdae5097b9def385c7de0f385908647 SHA512 b61d15b03447dfde9760ed39ef4b3ee605c38926401cb24699769e317636bf1fc6f20eab7a740d90cfeff4b8abcf42c4278732d0220b8817f2e64bc1f1581e05 WHIRLPOOL aa60e175595d1a6f2438f4b2d20787eb03f10c93ec5370e808b43a833319631d6c2f89920402fae6cf82a7a735919ebf61458a1a0ebacbee00e44b854efa365e
+EBUILD netwox-5.39.0.ebuild 1451 SHA256 3991a1587c3b611a47eedbb5b846eb7479c43f249e3fb78242368d843750586a SHA512 8214d3fec8d92ff58c27b8a84fad5f18296030990bc3e01305718bbf5ebd3b40b8f4878e036c0f43d6c7aebb47ec9d330c37f049f1b8a632b52ff6f37d5b2aa2 WHIRLPOOL 68fae3f67b5ec0f2472b474f706807948b03cf46981e6775908b275962d5e0b17e9f8814c8afd21836cd4ae62a2680d3bbc5fbaf91465d1e28dd5ef714b9f635
+MISC ChangeLog 4977 SHA256 293830a7d52fc6299d8bd46ba423266af1c42982457e62aec546e065b204ca44 SHA512 32ff874f365c687902f2d983e55d3dd3539bc865945499691cea92ccd3aa41b7e9130f9fa7ea17cd7b1c1a8720c83b4e9b0a662818c745cf50444cf0d8c87810 WHIRLPOOL 2fd76b7c72bbfda5941fca6987b7102d2ec7a13292a33d84a49a2e4711c15acaac636c82302d3a8171f0a50b5180091f591e36f6c101d02e84c9640681c83aa7
 MISC metadata.xml 257 SHA256 508181b9ebfa60711ff9caaae0e7ea556d1ed2a77b93c80cab2cc8555254c906 SHA512 b4176ccabc6570e1fd71e4dc6523af477350cce681b34ee206c65df45faa23d795eaef8af9c58c8bb6b7d488087df7155c22a63ad9822c12294e80e45f19bf60 WHIRLPOOL 92588c91bd28b848543c191d3a97593af0501d4d5320f547181981cfef9e33e3cde7b84b31088f0ad888178e78a1197bcecb8170b5e23278f63ec5ec753e643b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlDqtRgACgkQVWmRsqeSphNHLwCfc0BwGjJOfw49SCeTqNhSVDh3
-bmEAn115mzQhCt9Q+ohenKSGvXA+N70+
-=xVCw
+iEYEAREIAAYFAlPEZNMACgkQVWmRsqeSphMKZQCcDZsnuuEE2x5/Gd09f8u9tdDm
+xPAAnj/YvYotwbmtQZpDpyNXNTbthqXj
+=l9wq
 -----END PGP SIGNATURE-----
