@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/netwox
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netwox/ChangeLog,v 1.39 2013/01/07 11:44:22 jer Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netwox/ChangeLog,v 1.40 2014/07/14 23:16:34 jer Exp $
+
+  14 Jul 2014; Jeroen Roovers <jer@gentoo.org> netwox-5.39.0.ebuild:
+  EAPI bump. Use dohtml.
 
   07 Jan 2013; Jeroen Roovers <jer@gentoo.org> -netwox-5.38.0.ebuild:
   Old.
