@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/netwag
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netwag/ChangeLog,v 1.29 2013/02/01 15:43:31 jer Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netwag/ChangeLog,v 1.30 2014/07/14 23:08:43 jer Exp $
+
+  14 Jul 2014; Jeroen Roovers <jer@gentoo.org> netwag-5.39.0.ebuild:
+  EAPI bump. Use dohtml.
 
   01 Feb 2013; Jeroen Roovers <jer@gentoo.org> netwag-5.39.0.ebuild:
   /usr/bin/eterm changed to /usr/bin/Eterm.
